--- a/assets/style.css
+++ b/assets/style.css
@@ -164,6 +164,7 @@ body {
     background-color: rgba(0, 0, 0, 0.733);
     margin-top: -1px;
     animation: zoom 0.3s ease-in-out;
+    visibility: hidden;
 }
 
 @keyframes zoom {
